# PyStack

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
src/closedcv/: libfunctions.py
