[metadata]
name = PyStack
version = 1.0.1
author = Isaac Nelson
description = Adds the stack class from C to Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EitherOr6917/PyStack
project_urls =
    Bug Tracker = https://github.com/EitherOr6917/PyStack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src